@@ -35,22 +35,16 @@
 <div class="topic">
 	<h3>CHANGELOG</h3>
 	<div class="pad">
-		<span><b>2020-04-26</b></span>
+		<span><b>2020-06-21</b></span>
 		<div id="changelog20200424">
 			<ul>
-				<li>Naming functionality for builds</li>
-				<li>Fixed Finger Offensive damage computation</li>
-				<li>Fixed A Whistle Perfect Dodge bonus computation</li>
-				<li>Shield Chain now take into consideration race defense bypass</li>
-				<li>Fixed Stone Skin, Anti Magic, Magic Mirror and Keeping skills</li>
-			</ul>
-		</div>
-		<br/>
-		<span><b>2020-04-19</b></span>
-		<div id="changelog20200412">
-			<ul>
-				<li>Fixed Bragi behaviour</li>
-				<li>Fixed hard DEF formula</li>
+				<li>Fixed AR/FAR ASPD party buff</li>
+				<li>Fixed Eddga behaviour with MDEF</li>
+				<li>Added new Elysian Garden monsters</li>
+				<li>Fixed Spiral Pierce damage computation</li>
+				<li>Added form validation upon save action</li>
+				<li>Fixed ASPD value for Katar on Assassin</li>
+				<li>Shield Chain now take into consideration class defense bypass</li>
 			</ul>
 		</div>
 	</div>
