@@ -1,3 +1,9 @@
+[2020-06-21]
+- Fixed AR/FAR ASPD party buff
+- Fixed Eddga behaviour with MDEF
+- Added new Elysian Garden monsters
+- Shield Chain now take into consideration class defense bypass
+
 [2020-05-29]
 - Fixed Spiral Pierce damage computation
 
